--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>叶秋菊❤阮翔</title>
 </head>
 <body>
 <h1>静夜思</h1>
